<resources>
    <string name="app_name">bancom_mobile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>


    <string name="confirm_name">Your name</string>
    <string name="confirm_phone">Your phone number</string>
    <string name="confirm_address">Your address</string>
    <string name="confirm_city">Your city name</string>
    <string name="confirm_order">Confirm your order to process checkout</string>
    <string name="confirm_info">Shipment info</string>
    <string name="confirm_total_text">Total:</string>
    <string name="confirm_checkout_btn">Confirm</string>


    <string name="order_total_text">Total</string>

    <string name="order_product_quantity">Quantity:</string>


</resources>
