<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_profile"
            />
        <!--<item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/menu_cart"
            />-->
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:onClick="logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
