<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrderActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/confirm_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/confirm_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_info"
        android:layout_below="@id/confirm_order"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <View
        android:id="@+id/confirm_divider"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginVertical="15dp"
        android:background="@android:color/darker_gray"

        android:layout_below="@id/confirm_info"/>
    <EditText
        android:id="@+id/confirm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_name"
        android:layout_below="@id/confirm_divider"
        android:layout_marginVertical="5dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/confirm_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_phone"
        android:layout_below="@id/confirm_name"
        android:layout_marginVertical="5dp"
        android:inputType="phone"

        />
    <EditText
        android:id="@+id/confirm_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_address"
        android:layout_below="@id/confirm_phone"
        android:layout_marginVertical="5dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/confirm_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_city"
        android:layout_below="@id/confirm_address"
        android:layout_marginVertical="5dp"
        android:inputType="text"
        />
    <View
        android:id="@+id/confirm_divider2"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginVertical="20dp"
        android:background="@android:color/darker_gray"

        android:layout_below="@id/confirm_city"/>
    <LinearLayout
        android:id="@+id/confirm_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/confirm_divider2"
        >
        <TextView
            android:id="@+id/confirm_total_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_total_text"
            android:textSize="18dp"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:id="@+id/confirm_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3000000"
            android:textSize="18dp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/confirm_checkout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_checkout_btn"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>